--- a/content/posts/2015-11-04-hallo.md
+++ b/content/posts/2015-11-04-hallo.md
@@ -6,7 +6,7 @@ date: 2015-11-04T11:55:31+00:00
 url: /2015/11/04/hallo/
 image: /wp-content/uploads/2015/11/keep-calm-and-well-hello-there.png
 categories:
-  - Blogs
+  - "Blogs"
 format: video
 
 ---
